welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:5: error: Unmatched closing brace '}' ignored here
    if (((a<=0 && b >=0)||(a>=0 && b<=0)) && (negative== false))}
                                                                ^